@@ -10,6 +10,7 @@
  358717 Order of files added to queue (Adrian Yee)
  358211 Get New Headers expands selected collapsed thread (Douglas Bollinger)
  359171 download files with same name -> mangled suffixes (Jerry Segers, Jr.)
+ 361144 xover tasks should be inserted at the top of the queue (David)
 
 0.115 "Tip Jar"
  358077 cut memory use in half for large binaries groups (Charles)
